--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -292,6 +292,7 @@ main {
     @include sm {
         width: 100%;
         height: 100%;
+        padding: 23.5px;
     }
 
   label {
@@ -305,6 +306,10 @@ main {
           border-radius: 8px;
           border: 1px solid rgb(215, 221, 233, 1);
           padding: 16px;
+
+          @include sm {
+            width: 100%;
+          }
         }
     }
 
