--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -101,10 +101,6 @@ main {
     text-align: center;
     margin-bottom: 24px;
 
-    &:last-of-type {
-      margin-top: 24px;
-      margin-bottom: 24px;
-    }
   }
 
   .tasks-content {
@@ -114,18 +110,26 @@ main {
     border-radius: 16px;
     border: 1px solid #eaecf0;
     box-shadow: 0px 1px 2px 0px rgb(16, 24, 40, 0.05);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .tasks-day {
+      height: 243.36px;
+    }
+
+    .tasks-day-finished {
+      height: 123.36px;
+      h2 {
+        margin-top: 24px;
+      }
+    }
 
     @include sm {
         width: 272px;
         height: 428px;
     }
 
-    .tasks-content2 {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 24px;
 
       ul {
         display: flex;
@@ -263,7 +267,6 @@ main {
           }
         }
       }
-    }
   }
 }
 .height-new-task {
