--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -35,6 +35,11 @@ main {
       color: #101828;
       font-weight: bold;
       text-align: start;
+
+      @include sm {
+        font-size: 22px;
+        margin-inline-start: 8px;
+      }
     }
   }
 
